--- a/Notebook 4.ipynb
+++ b/Notebook 4.ipynb
@@ -58,7 +58,7 @@
    "id": "65689381",
    "metadata": {},
    "source": [
-    "First the weather dataset should de downloaded and preprocces for modelling."
+    "First the weather dataset should de downloaded and preprocces for modelling. The weather data used here is manually been extracted from wundergorund.com and weather.gov to an excel file and exported to a csv file saved on github."
    ]
   },
   {
